examples/example-gatewayparameters-stats-matcher.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gw-stats
spec:
  gatewayClassName: kgateway
  infrastructure:
    parametersRef:
      group: gateway.kgateway.dev
      kind: GatewayParameters
      name: gwp-stats
  listeners:
    - protocol: HTTP
      port: 8080
      name: http
