examples/example-gw-with-http-listener-policy.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route
spec:
  parentRefs:
  - name: gw
  hostnames:
  - "example.com"
  rules:
  - backendRefs:
    - name: example-svc
      port: 8080
  - matches:
    - path:
        type: PathPrefix
        value: /timeout
    backendRefs:
    - name: example-svc
      port: 8080
