examples/example-gw-with-listener-policy.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route
spec:
  parentRefs:
    - name: gw
  hostnames:
    - "example.com"
  rules:
    - backendRefs:
        - name: httpbin
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /timeout
      backendRefs:
        - name: httpbin
          port: 8000
