examples/example-internal-listener-directresponse.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal-listener-directresponse
spec:
  gatewayClassName: kgateway
  infrastructure:
    parametersRef:
      group: gateway.kgateway.dev
      kind: GatewayParameters
      name: gwp-internal-listener-directresponse
  listeners:
    - name: external
      protocol: HTTP
      port: 8080
    - name: internal
      protocol: HTTP
      port: 8081
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: internal-listener-directresponse.localhost
spec:
  parentRefs:
    - name: internal-listener-directresponse
      sectionName: external
  hostnames:
    - internal-listener-directresponse.localhost
  rules:
    - backendRefs:
        - group: gateway.kgateway.dev
          kind: Backend
          name: internal-listener-directresponse
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: internal-listener-directresponse.internal
spec:
  parentRefs:
    - name: internal-listener-directresponse
      sectionName: internal
  hostnames:
    # Note: This is the same hostname as the external HTTPRoute to omit autoHostRewrite for simplicity
    - internal-listener-directresponse.localhost
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            name: internal-listener-direct-response
            group: gateway.kgateway.dev
            kind: DirectResponse
